# nanochat

./: .gitignore  make-runpod.sh  nanochat_byte_identity__google_gemini-3-flash-preview.jsonl  pep827_conversations.jsonl  pyproject.toml  qamis_conversations__google_gemini-3-flash-preview.jsonl  qamis_conversations__haiku.jsonl  qamis_conversations__openai_gpt-5-mini.jsonl  results-orig-bad.csv  results_sft-mask.csv  setup-runpod.sh
analysis/: .gitignore  gsm8k_breakdown.md  gsm8k_breakdown.py
dev/: LOG.md  _dip_plot.py  _dip_pull.py  _meanutil.py  analyze_run.py  anneal_workflow.md  batched_generate.py  bench_attn_kernel.py  bench_block_slice.py  bench_decode.py  bench_full_causal.py  bench_multisample_prefill.py  bolmo_adaptation_report.md  byte_lm_literature_review.md  compute_usage.py  convert_byte_tokenizer_unescaped.py  curve_data.csv  cute_benchmark_notes.md  cute_sweep_recipes.md  d24_byte_experiment_plan.md  fetch_curve_data.py  fix_wandb_runtime.py  gen_cute_pt_data.py  gen_identity_data.py  gen_russian_smoltalk.py  gen_synthetic_data.py  gen_synthetic_data_qamis.py  graphs.mk  identity_nanochat_byte.md  inspect_wandb_run.py  llm_client.py  merge_optim_shards.py  move_checkpoints.py  plot_byte_vs_bpe_curve.py  plot_core.py  plot_cute_sweep.py  plot_dip.py  plot_mix_vs_cute_pt.py  plotsave.py  repro_flex_oom.py  (+10 more)
hf_export/: README_base.md  README_chat.md  _runtime_template.py  _wrapper_modeling_template.py  chat_template.jinja  configuration_nanochat.py  generate_hf_model.py  test_chat_e2e.py  test_tokenizer.py  tokenization_nanochat.py
nanochat/: byte_tokenizer.py  checkpoint_manager.py  common.py  core_eval.py  dataloader.py  dataset.py  engine.py  flash_attention.py  gpt.py  report.py  tokenizer.py
runs/: chat_anneal_byte.sh  chat_rl_byte.sh  chat_sft_bpe_matched.sh  chat_sft_byte.sh  cute_mix.sh  cute_pt.sh  cute_pt_d24_byte_l.sh  cute_scratch.sh  early_d24_byte_l.sh  extend_d24_byte_l.sh  fetch-checkpoints.sh  finetune.sh  miniseries.sh  resume.py  (+5 more)
(+20 files in other folders)
